changing install certs are failing on travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ go:
   - tip
 
 before_install:
-  - go get -t -v ./...
+  - go get ./...
 
 script:
   - go test -race -coverprofile=coverage.txt -covermode=atomic
