--- a/model/test_files/circular-tests.yaml
+++ b/model/test_files/circular-tests.yaml
@@ -1,18 +1,17 @@
 components:
   schemas:
-#    One:
-#      description: "test one"
-#      properties:
-#        things:
-#          anyOf:
-#            - "$ref": "#/components/schemas/Two"
-#    Two:
-#      decription: "test two"
-#      properties:
-#        testThing:
-#          "$ref": "#/components/schemas/Three"
-#        anyOf:
-#          - "$ref": "#/components/schemas/Four"
+    One:
+      description: "test one"
+      properties:
+        things:
+          "$ref": "#/components/schemas/Two"
+    Two:
+      decription: "test two"
+      properties:
+        testThing:
+          "$ref": "#/components/schemas/One"
+        anyOf:
+          - "$ref": "#/components/schemas/Four"
     Three:
       description: "test three"
       properties:
@@ -29,18 +28,22 @@ components:
           "$ref": "#/components/schemas/Five"
     Five:
       properties:
-        "$ref": "#/components/schemas/Six"
+        rice:
+          "$ref": "#/components/schemas/Six"
     Six:
       properties:
-        "$ref": "#/components/schemas/Nine"
+        mints:
+          "$ref": "#/components/schemas/Nine"
     Seven:
       properties:
-        "$ref": "#/components/schemas/Three"
+        wow:
+          "$ref": "#/components/schemas/Three"
     Nine:
       description: done.
     Ten:
       properties:
-        "$ref": "#/components/schemas/Ten"
+        yeah:
+          "$ref": "#/components/schemas/Ten"
 
 
 
