Resolver and index seem to be fully functional!
I need to run a few more tests, however, I think I may have finally cracked this monster.

--- a/model/test_files/circular-tests.yaml
+++ b/model/test_files/circular-tests.yaml
@@ -1,3 +1,11 @@
+paths:
+  /burgers:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Nine'
 components:
   schemas:
     One:
