Added APIServers rule and updated index
Index now looks for root level servers and operation level servers, which will be useful later. Another rule can look at operation level overrides for 'hard' mode.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/model/test_files/all-the-components.yaml
+++ b/model/test_files/all-the-components.yaml
@@ -22,8 +22,12 @@ tags:
       url: "https://quobix.com/"
 servers:
   - url: https://quobix.com/api
+  - url: https://pb33f.com/api
 paths:
   /burgers:
+    servers:
+      - url: https://somwhere.quobix.com/api
+      - url: https://pb33f.io/api
     post:
       operationId: createBurger
       tags:
@@ -100,6 +104,9 @@ paths:
                     message: unable to accept this request, looks bad, missing something.
   /burgers/{burgerId}:
     get:
+      servers:
+        - url: https://nowhere.quobix.com/api
+        - url: https://pb33f.net/api
       operationId: locateBurger
       tags:
         - "Meat"
