Adding new build report functionality.
UI build is operating, building, linting and testing with success.

--- a/html-report/ui/tsconfig.json
+++ b/html-report/ui/tsconfig.json
@@ -9,5 +9,8 @@
     "allowJs": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "./build",
+    "web-test-runner.config.mjs", "webpack.config.js"]
 }
