--- a/html-report/ui/package.json
+++ b/html-report/ui/package.json
@@ -28,8 +28,7 @@
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2",
-    "husky": "^8.0.1"
+    "webpack-cli": "^4.9.2"
   },
   "dependencies": {
     "@open-wc/testing": "^3.1.4",
