Updating workflow to build, test and lint the html-report
All the code that powers that report, shoult be as high quality as possible.

Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/.github/workflows/vaccum-postmerge.yml
+++ b/.github/workflows/vaccum-postmerge.yml
@@ -39,9 +39,23 @@ jobs:
     steps:
       - uses: actions/checkout@v2
         name: Checkout repository
-        
+
+      - name: Change directory into report UI
+        run: cd html-report/ui
+
       - name: Set up Node.js ⚙️
         uses: actions/setup-node@v2
 
       - name: Install dependencies 📦
         run: yarn install --frozen-lockfile
+
+      - name: Build
+        run: yarn build
+
+      - name: Test
+        run: yarn test
+
+      - name: Lint
+        run: yarn lint
+
+
