--- a/.github/workflows/vaccum-postmerge.yml
+++ b/.github/workflows/vaccum-postmerge.yml
@@ -40,22 +40,17 @@ jobs:
       - uses: actions/checkout@v2
         name: Checkout repository
 
-      - name: Change directory into report UI
-        run: cd html-report/ui
-
-      - name: Set up Node.js ⚙️
-        uses: actions/setup-node@v2
-
-      - name: Install dependencies 📦
-        run: yarn install --frozen-lockfile
-
-      - name: Build
-        run: yarn build
-
-      - name: Test
-        run: yarn test
-
-      - name: Lint
-        run: yarn lint
+      - uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: cwd html-report/ui install # will run `yarn install` command
+      - uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: build
+      - uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: test
+      - uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: lint
 
 
