rremoving husky for now.
Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/html-report/ui/package.json
+++ b/html-report/ui/package.json
@@ -12,8 +12,7 @@
     "lint": "eslint --ext .ts,.html . --ignore-path .gitignore && prettier \"**/*.ts\" --check --ignore-path .gitignore",
     "format": "eslint --ext .ts,.html . --fix --ignore-path .gitignore && prettier \"**/*.ts\" --write --ignore-path .gitignore",
     "test": "tsc && wtr --coverage",
-    "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\"",
-    "prepare": "cd ../../ && husky install html-report/ui/.husky"
+    "test:watch": "tsc && concurrently -k -r \"tsc --watch --preserveWatchOutput\" \"wtr --watch\""
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^7.0.0",
