Adding in last stages to build.
Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/.github/workflows/vaccum-postmerge.yml
+++ b/.github/workflows/vaccum-postmerge.yml
@@ -49,3 +49,15 @@ jobs:
         run: yarn install
         working-directory: html-report/ui
 
+      - name: Build
+        run: yarn build
+        working-directory: html-report/ui
+
+      - name: Test
+        run: yarn test
+        working-directory: html-report/ui
+
+      - name: Lint
+        run: yarn lint
+        working-directory: html-report/ui
+
