--- a/html-report/ui/package.json
+++ b/html-report/ui/package.json
@@ -7,6 +7,7 @@
   "author": "Dave Shanley",
   "license": "MIT",
   "scripts": {
+    "start-dev-server": "webpack serve --open",
     "start": "webpack --mode=development --watch",
     "build": "webpack --mode=production",
     "lint": "eslint --ext .ts,.html . --ignore-path .eslintignore && prettier \"**/*.ts\" --check --ignore-path .eslintignore",
@@ -27,7 +28,8 @@
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
   },
   "dependencies": {
     "@open-wc/testing": "^3.1.4",
@@ -39,29 +41,29 @@
     "typescript": "^4.6.4"
   },
   "eslintConfig": {
-    "extends": [
-      "@open-wc/eslint-config",
-      "plugin:@typescript-eslint/recommended"
-    ],
+    "parser": "@typescript-eslint/parser",
     "plugins": [
       "@typescript-eslint"
+    ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:@typescript-eslint/eslint-recommended",
+      "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
       "no-unused-vars": "off",
       "no-unused-expressions": "off",
       "comma-dangle": "off",
+      "no-var-requires": "off",
+      "linebreak-style": "off",
+      "no-plusplus": "off",
+      "no-param-reassign": "off",
       "@typescript-eslint/no-non-null-assertion": "off",
+      "@typescript-eslint/ban-ts-comment": "off",
       "@typescript-eslint/no-unused-vars": [
         "error"
       ],
-      "import/no-unresolved": "off",
-      "import/extensions": [
-        "error",
-        "never",
-        {
-          "init": "always"
-        }
-      ]
+      "import/no-unresolved": "off"
     }
   },
   "prettier": {
