--- a/html-report/ui/package.json
+++ b/html-report/ui/package.json
@@ -17,15 +17,18 @@
   },
   "devDependencies": {
     "@open-wc/eslint-config": "^7.0.0",
+    "@types/chart.js": "^2.9.37",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@web/test-runner": "^0.13.27",
+    "copy-webpack-plugin": "^10.2.4",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-lit-a11y": "^2.2.0",
     "eslint-plugin-wc": "^1.3.2",
     "lint-staged": "^12.4.1",
+    "mini-css-extract-plugin": "^2.6.0",
     "prettier": "^2.6.2",
     "webpack": "^5.72.0",
     "webpack-cli": "^4.9.2",
@@ -33,6 +36,8 @@
   },
   "dependencies": {
     "@open-wc/testing": "^3.1.4",
+    "@shoelace-style/shoelace": "^2.0.0-beta.73",
+    "chart.js": "^3.7.1",
     "css-loader": "^6.7.1",
     "lit": "^2.2.3",
     "style-loader": "^3.3.1",
