--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,7 +9,7 @@ updates:
     directory: "/"
     schedule:
       interval: "daily"
-  - package-ecosystem: "yarn" 
+  - package-ecosystem: "npm" 
     directory: "/html-report/ui"
     schedule:
       interval: "daily"
