Refactored property name of RuleResultsForCategory
It was getting too confusing to use as name, getting lost means the API is wrong, so I have modified it to make sence in the context of the model.

--- a/html-report/ui/tsconfig.json
+++ b/html-report/ui/tsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "outDir": "./build/dist/",
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "module": "es6",
     "target": "es6",
     "jsx": "react",
