--- a/html-report/ui/package.json
+++ b/html-report/ui/package.json
@@ -21,6 +21,9 @@
     "@typescript-eslint/eslint-plugin": "^5.27.0",
     "@typescript-eslint/parser": "^5.27.0",
     "@web/test-runner": "^0.13.30",
+    "@web/dev-server-esbuild": "^0.3.0",
+    "@web/test-runner-commands": "^0.6.1",
+    "@web/test-runner-playwright": "^0.8.8",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.17.0",
     "eslint-config-prettier": "^8.5.0",
