--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@quobix/vacuum",
-  "version": "0.0.12",
+  "version": "0.0.13",
   "description": "The world's fastest, most scalable and complete OpenAPI parser",
   "type": "module",
   "author": "Dave Shanley",
@@ -24,8 +24,7 @@
   ],
   "dependencies": {
     "node-fetch": "^3.1.0",
-    "tar": "^6.1.11",
-    "vacuum": "^0.1.3"
+    "tar": "^6.1.11"
   },
   "bugs": {
     "url": "https://github.com/daveshanley/vacuum/issues"
