--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -13,9 +13,9 @@ builds:
       - darwin
 archives:
   - replacements:
-      darwin: Darwin
-      linux: Linux
-      windows: Windows
+      darwin: darwin
+      linux: linux
+      windows: windows
       386: i386
       amd64: x86_64
 checksum:
@@ -28,3 +28,54 @@ changelog:
     exclude:
       - '^docs:'
       - '^test:'
+brews:
+  -
+    # Name template of the recipe
+    # Default to project name
+    name: vacuum
+
+    # GitHub/GitLab repository to push the formula to
+    tap:
+      owner: daveshanley
+      name: homebrew-vacuum
+
+      # Optionally a branch can be provided.
+      # Defaults to the default repository branch.
+      branch: main
+
+    # The project name and current git tag are used in the format string.
+    commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
+
+    # Folder inside the repository to put the formula.
+    # Default is the root folder.
+    folder: Formula
+
+    # Your app's homepage.
+    # Default is empty.
+    homepage: "https://quobix.com/vacuum/"
+
+    # Template of your app's description.
+    # Default is empty.
+    description: "The world's fastes, most scalable and industrial strength OpenAPI linter in the world."
+
+    # SPDX identifier of your app's license.
+    # Default is empty.
+    license: "MIT"
+
+    # Setting this will prevent goreleaser to actually try to commit the updated
+    # formula - instead, the formula file will be stored on the dist folder only,
+    # leaving the responsibility of publishing it to the user.
+    # If set to auto, the release will not be uploaded to the homebrew tap
+    # in case there is an indicator for prerelease in the tag e.g. v1.0.0-rc1
+    # Default is false.
+    skip_upload: true
+
+    # So you can `brew test` your formula.
+    # Default is empty.
+    test: |
+      system "#{bin}/vacuum --version"
+
+    # Custom install script for brew.
+    # Default is 'bin.install "program"'.
+    install: |
+      bin.install "vacuum"
