added token for secret.
Another round of tags!

Signed-off-by: Dave Shanley <dshanley@splunk.com>

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -43,6 +43,8 @@ brews:
       # Defaults to the default repository branch.
       branch: main
 
+      token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
+
     # The project name and current git tag are used in the format string.
     commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
 
