Working on pipeline to improve automation
this workflow will be used repeatedly for all pb33f products.

--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -1,7 +1,10 @@
 name: "NPM Publish"
 
-on: push
-
+on:
+  push:
+    # run only against tags
+    tags:
+      - '*'
 jobs:
   publish:
     runs-on: ubuntu-latest
