--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -1,5 +1,4 @@
-# This is an example .goreleaser.yml file with some sensible defaults.
-# Make sure to check the documentation at https://goreleaser.com
+project_name: vacuum
 before:
   hooks:
     # You may remove this if you don't use go modules.
@@ -20,8 +19,7 @@ archives:
       amd64: x86_64
 checksum:
   name_template: 'checksums.txt'
-snapshot:
-  name_template: "{{ incpatch .Version }}-next"
+
 changelog:
   sort: asc
   filters:
@@ -29,47 +27,20 @@ changelog:
       - '^docs:'
       - '^test:'
 brews:
-  -
-    # Name template of the recipe
-    # Default to project name
-    name: vacuum
-
-    # GitHub/GitLab repository to push the formula to
-    tap:
+  - tap:
       owner: daveshanley
       name: homebrew-vacuum
-
-      # Optionally a branch can be provided.
-      # Defaults to the default repository branch.
-      branch: main
-
       token: "{{ .Env.HOMEBREW_TAP_GITHUB_TOKEN }}"
 
-    # The project name and current git tag are used in the format string.
-    commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
+    commit_author:
+      name: goreleaserbot
+      email: goreleaser@quobix.com
 
-    # Folder inside the repository to put the formula.
-    # Default is the root folder.
-    folder: Formula
+    homepage: "https://quobix.com/vacuum"
+    description: "The worlds fastest and most scalable OpenAPI linter"
 
-    # Your app's homepage.
-    # Default is empty.
-    homepage: "https://quobix.com/vacuum/"
-
-    # Template of your app's description.
-    # Default is empty.
-    description: "The world's fastes, most scalable and industrial strength OpenAPI linter in the world."
-
-    # SPDX identifier of your app's license.
-    # Default is empty.
-    license: "MIT"
-
-    # So you can `brew test` your formula.
-    # Default is empty.
-    test: |
-      system "#{bin}/vacuum --version"
-
-    # Custom install script for brew.
-    # Default is 'bin.install "program"'.
     install: |
       bin.install "vacuum"
+
+snapshot:
+  name_template: "{{ .Tag }}"
