--- a/.github/workflows/vaccum-postmerge.yml
+++ b/.github/workflows/vaccum-postmerge.yml
@@ -1,63 +1,63 @@
-name: vacuum pipeline
-
-on:
-  push:
-    branches:
-      - main
-jobs:
-  test:
-    runs-on: ubuntu-20.04
-    steps:
-      - name: Set up repo
-        uses: actions/checkout@v3
-      - uses: actions/setup-go@v2
-        with:
-          go-version: '^1.16'
-      - run: go get ./...
-      - run: |
-          go get github.com/axw/gocov/gocov
-          go get github.com/AlekSi/gocov-xml
-          go install github.com/axw/gocov/gocov
-          go install github.com/AlekSi/gocov-xml
-      - run: |
-          go test -v -coverprofile cover.out ./...
-          gocov convert cover.out | gocov-xml > coverage.xml
-      - uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          files: ./coverage.xml
-          flags: unittests
-          fail_ci_if_error: true
-          verbose: true
-
-
-  build-report-ui:
-    runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        node-version: [ 16.x, 18.x ]
-    steps:
-      - uses: actions/checkout@v3
-        name: Checkout repository
-
-      - name: setup node ${{matrix.node-version}}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{matrix.node-version}}
-
-      - name: Install yarn
-        run: yarn install
-        working-directory: html-report/ui
-
-      - name: Build
-        run: yarn build
-        working-directory: html-report/ui
-
-      - name: Test
-        run: yarn test
-        working-directory: html-report/ui
-
-      - name: Lint
-        run: yarn lint
-        working-directory: html-report/ui
-
+#name: vacuum pipeline
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#jobs:
+#  test:
+#    runs-on: ubuntu-20.04
+#    steps:
+#      - name: Set up repo
+#        uses: actions/checkout@v3
+#      - uses: actions/setup-go@v2
+#        with:
+#          go-version: '^1.16'
+#      - run: go get ./...
+#      - run: |
+#          go get github.com/axw/gocov/gocov
+#          go get github.com/AlekSi/gocov-xml
+#          go install github.com/axw/gocov/gocov
+#          go install github.com/AlekSi/gocov-xml
+#      - run: |
+#          go test -v -coverprofile cover.out ./...
+#          gocov convert cover.out | gocov-xml > coverage.xml
+#      - uses: codecov/codecov-action@v1
+#        with:
+#          token: ${{ secrets.CODECOV_TOKEN }}
+#          files: ./coverage.xml
+#          flags: unittests
+#          fail_ci_if_error: true
+#          verbose: true
+#
+#
+#  build-report-ui:
+#    runs-on: ubuntu-20.04
+#    strategy:
+#      matrix:
+#        node-version: [ 16.x, 18.x ]
+#    steps:
+#      - uses: actions/checkout@v3
+#        name: Checkout repository
+#
+#      - name: setup node ${{matrix.node-version}}
+#        uses: actions/setup-node@v3
+#        with:
+#          node-version: ${{matrix.node-version}}
+#
+#      - name: Install yarn
+#        run: yarn install
+#        working-directory: html-report/ui
+#
+#      - name: Build
+#        run: yarn build
+#        working-directory: html-report/ui
+#
+#      - name: Test
+#        run: yarn test
+#        working-directory: html-report/ui
+#
+#      - name: Lint
+#        run: yarn lint
+#        working-directory: html-report/ui
+#
