--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -1,9 +1,10 @@
 name: Tag Release
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
+#   push:
+#     branches:
+#       - main
 
 jobs:
   tag:
