--- a/.github/workflows/tag.yaml
+++ b/.github/workflows/tag.yaml
@@ -1,10 +1,10 @@
 name: Tag Release
 
+# workflow_dispatch:
 on:
-  workflow_dispatch:
-#   push:
-#     branches:
-#       - main
+  push:
+    branches:
+      - main
 
 jobs:
   tag:
