(fix): Corrected the pipeline to tag docker images correctly.
Signed-off-by: Dave Shanley <dave@quobix.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -105,5 +105,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          tags: dshanley/vacuum:latest
