--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -105,4 +105,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: dshanley/vacuum:latest
+          tags: dshanley/vacuum:latest, dshanley/vacuum:${{ github.event.client_payload.new-tag }}
