--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,7 +19,7 @@ jobs:
         uses: actions/setup-go@v4
         id: go
         with:
-          go-version: ^1.20
+          go-version: 1.21
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v4
