cleaned up html_report test and re-enabled tests in pipeline
Signed-off-by: quobix <dave@quobix.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,6 +32,8 @@ jobs:
               curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
               dep ensure
           fi
+      - name: Test
+        run: go test ./...
       - name: Build
         run: make build
       - name: Clean modcache
