`message` now overrides all core function messages #318
By adding a ‘message` property to a rule that uses a core function, any violations for that rule, will use the supplied message completely, vs the default output built into vacuum for that core function. This gives complete control over the message presented to users who violate the rule.

Signed-off-by: quobix <dave@quobix.com>

--- a/rulesets/examples/custom-ruleset.yaml
+++ b/rulesets/examples/custom-ruleset.yaml
@@ -4,6 +4,7 @@ rules:
   check-title-is-exactly-this:
     description: Check the title of the spec is exactly, 'this specific thing'
     severity: error
+    message: you have to make the title 'this specific thing'
     recommended: true
     formats: [oas2, oas3]
     given: $.info
