--- a/rulesets/examples/specific-ruleset.yaml
+++ b/rulesets/examples/specific-ruleset.yaml
@@ -1,5 +1,5 @@
 extends: [[spectral:oas, off]]
 rules:
   oas3-valid-schema-example: true
-  oas2-valid-schema-example: true
+  oas3-missing-example: true
   info-contact: true
