I wish GH actions were easier to test

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -81,9 +81,10 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v4
-        fetch-depth: 50
-        fetch-tags: true
-        show-progress: true
+        with:
+          fetch-depth: 50
+          fetch-tags: true
+          show-progress: true
 
       - name: Log in to Docker Hub
         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
