--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,9 +21,10 @@ jobs:
 
       - name: Checkout code
         uses: actions/checkout@v4
-        fetch-depth: 50
-        fetch-tags: true
-        show-progress: true
+        with:
+          fetch-depth: 50
+          fetch-tags: true
+          show-progress: true
 
       - name: Check go mod tidy is up to date
         run: go mod tidy && git diff --exit-code
