--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -37,9 +37,10 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        fetch-depth: 50
-        fetch-tags: true
-        show-progress: true
+        with:
+          fetch-depth: 50
+          fetch-tags: true
+          show-progress: true
 
       - name: Set version
         id: vars
