--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -100,6 +100,9 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
@@ -109,8 +112,10 @@ jobs:
             ghcr.io/${{ github.repository }}
 
       - name: Build and push Docker images
-        uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+        uses: docker/build-push-action@v5
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: dshanley/vacuum:latest, dshanley/vacuum:${{ github.event.client_payload.new-tag }}
+          tags: dshanley/vacuum:latest, dshanley/vacuum:${{ github.event.client_payload.new-tag }}, ghcr.io/${{ github.repository }}:latest, ghcr.io/${{ github.repository }}:${{ github.event.client_payload.new-tag }}
+          labels: ${{ steps.meta.outputs.labels }}
