--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm-install"
   ],
   "dependencies": {
+    "@sourcemeta/jsonschema": "^11.5.1",
     "node-fetch": "^3.2.10",
     "tar": "^6.1.11"
   },
