chore(ci): continue-on-error set to true to fix schemas
Signed-off-by: karan-palan <karanpalan007@gmail.com>

--- a/.github/workflows/jsonschema-lint.yaml
+++ b/.github/workflows/jsonschema-lint.yaml
@@ -30,6 +30,7 @@ jobs:
         run: npm install @sourcemeta/jsonschema@11.5.1
       - name: Lint JSON Schemas
         run: npx jsonschema lint rulesets/schemas
+        continue-on-error: true
       - name: Fix JSON Schema issues
         run: npx jsonschema lint rulesets/schemas --fix
       - name: Commit fixes
