--- a/.github/workflows/jsonschema-lint.yaml
+++ b/.github/workflows/jsonschema-lint.yaml
@@ -22,6 +22,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -37,6 +38,8 @@ jobs:
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
-          git add .
-          git diff --staged --quiet || git commit -m "fix(schema): auto-fix JSON schema linting issues"
-          git push
+          git add rulesets/schemas/
+          if ! git diff --staged --quiet; then
+            git commit -m "fix(schema): auto-fix JSON schema linting issues"
+            git push origin HEAD:${{ github.head_ref || github.ref_name }}
+          fi
