--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "npm-install"
   ],
   "dependencies": {
-    "@sourcemeta/jsonschema": "^11.5.1",
     "node-fetch": "^3.2.10",
     "tar": "^6.1.11"
+  },
+  "devDependencies": {
+    "@sourcemeta/jsonschema": "^11.5.1"
   },
   "bugs": {
     "url": "https://github.com/daveshanley/vacuum/issues"
