--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,6 +10,17 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Free Disk Space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: false
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: false
+
       - name: Checkout code
         uses: actions/checkout@v3
         with:
@@ -19,7 +30,7 @@ jobs:
         uses: actions/setup-go@v4
         id: go
         with:
-          go-version: 1.24
+          go-version: 1.25
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v5
@@ -80,6 +91,17 @@ jobs:
       packages: write
       contents: read
     steps:
+      - name: Free Disk Space
+        uses: jlumbroso/free-disk-space@main
+        with:
+          tool-cache: true
+          android: true
+          dotnet: true
+          haskell: true
+          large-packages: true
+          docker-images: true
+          swap-storage: false
+
       - name: Check out the repo
         uses: actions/checkout@v4
         with:
