--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "npm-install"
   ],
   "dependencies": {
+    "https-proxy-agent": "^7.0.6",
     "node-fetch": "^3.3.2",
     "tar": "^7.5.2"
   },
